subCode更新
